# welott-contract

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
Nearlott/: package-lock.json  package.json
Nearlott/contract/: Cargo.toml
Nearlott/contract/src/: assert.rs  config.rs  errors.rs  lib.rs  logic.rs  owner.rs  random_generator.rs  storage.rs  utils.rs  views.rs
nearlott/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  package-lock.json  package.json
nearlott/contract/: Cargo.toml  build.sh
nearlott/contract/src/: account.rs  account_btn_counting.rs  assert.rs  config.rs  errors.rs  gas.rs  info.rs  lib.rs  logic.rs  owner.rs  storage.rs  storage_tracker.rs  utils.rs  views.rs
nearlott/scripts/: 0-deploy.sh  0-dev-deploy.sh  1-config.sh  10-view_lottery.sh  2-round.sh  9-view.sh  NOTE  test_buy_tickets_1.sh  test_duplicate.sh
nearlott/tests/: simulation_test.rs  utils.rs
welott/: Cargo.toml  _rust_setup.sh  build.sh  package-lock.json
welott/contract/src/: account.rs  callback.rs  config.rs  info.rs  lib.rs  logic.rs  storage.rs  utils.rs  views.rs
welott/scripts/: 0-deploy.sh  10-view_lottery.sh  11-deploy-mainnet.sh  12-round-mainnet.sh  test_buy_tickets_3.sh
welott/tests/: simulation_test.rs
