[package]
name = "nearlott"
version = "0.0.1"
authors = ["MD <ducmd.cf@nearlenddao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"
near-sdk-sim = "4.0.0-pre.3"
contract = { path = "./contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "contract",
]
