[package]
name = "near_lott"
version = "1.0.0"
authors = ["Nearlend Dao <ducmd.cf@nearlenddao.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
near-contract-standards = "=4.0.0-pre.7"
near-sys = "=0.1"
uint = { version = "=0.9.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
]
