[package]
name = "contract"
version = "0.0.1"
authors = ["MD <ducmd.cf@nearlenddao.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
near-contract-standards = "=4.0.0-pre.7"
near-sys = "=0.1"
uint = { version = "=0.9.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "=0.8" }

[dev-dependencies]

